fix: missing spacing

--- a/assets/scss/helpers/_utils.scss
+++ b/assets/scss/helpers/_utils.scss
@@ -181,6 +181,9 @@
 .mb-4 {
   margin-bottom: 4px;
 }
+.mb-8 {
+  margin-bottom: 8px;
+}
 .mb-12 {
   margin-bottom: 12px;
 }
